adjusted some spacing issues, removed media query, adjusted some class rules

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,6 +1,5 @@
 body {
 	font-family: 'Montserrat', sans-serif;
-	margin: 0 auto;
 }
 section {
 	width: 100%;
@@ -27,7 +26,6 @@ section {
 	text-align: center;
 	font-weight: 400;
 	font-size: 40px;
-	margin-top: 70px;
 	margin-bottom: 20px;
 	padding: 0 40px;
 }
@@ -55,7 +53,7 @@ section {
 	width: 225px;
 }
 #lp-section-1 {
-	margin-bottom: 200px;
+	margin: 130px 0;
 }
 .image-container {
 	margin: 0 auto;
@@ -110,17 +108,6 @@ footer {
 #footer-link {
 	color: white;
 }
-/*@media only screen and (min-width: 600px) {
-	#lp-section-1 {
-		margin: 0 auto;
-
-	}
-	#get-started-button {
-		margin-top: 150px;
-		margin-bottom: 150px;
-	}
-}*/
-
 
 
 
